--- a/src/main/resources/dbcp.properties
+++ b/src/main/resources/dbcp.properties
@@ -6,5 +6,7 @@ url=jdbc:mysql://localhost:3306/test?autoRec&useUnicode=true&characterEncoding=u
 driverClassName=com.mysql.jdbc.Driver
 initialSize=3
 minIdle=3
-maxIdle=5
+maxIdle=05
 maxTotal=15
+validationQuery=SELECT 1
+testOnBorrow=true
