--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,8 @@
     <maven.compiler.target>1.8</maven.compiler.target>
     <spring.version>4.3.18.RELEASE</spring.version>
     <jackson.version>2.9.5</jackson.version>
+    <mybatis.version>3.4.6</mybatis.version>
+    <mybatis-spring.version>1.3.2</mybatis-spring.version>
   </properties>
 
 
@@ -174,7 +176,12 @@
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
-      <version>3.4.6</version>
+      <version>${mybatis.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis-spring</artifactId>
+      <version>${mybatis-spring.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
